After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691072 - decodebin: Doesn't expose pads if no data is received before EOS
decodebin: Doesn't expose pads if no data is received before EOS
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Linux
: Normal major
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 696273 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-01-03 15:07 UTC by Patrick Noffke
Modified: 2014-06-22 12:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Invalid music file. (22.53 KB, audio/ogg)
2013-01-03 15:26 UTC, Patrick Noffke
Details

Description Patrick Noffke 2013-01-03 15:07:15 UTC
I was asked to report this upstream.  The original bug report is here:
https://bugs.kde.org/show_bug.cgi?id=311999


If I do not have any tracks playing, and just add the GNR Lies album to the playlist, Amarok crashes (and doesn't open the Crash Reporting Assistant).

If I first have another track playing, then I can add the Lies album.  But when I try playing one of the tracks from Lies, it crashes.  When I restart Amarok, now the Lies album is still in my playlist, but again double-clicking a track to play it causes a crash.

Here is the listing of files for the Lies album:

$ ls -al ~/Music/Guns\ N\'\ Roses/G\ N\'\ R\ Lies/
total 272
drwxrwx--x. 2 pnoffke pnoffke  4096 Dec 19 10:17 .
drwxrwx--x. 3 pnoffke pnoffke  4096 Dec 19 10:06 ..
-rw-rw-r--. 1 pnoffke pnoffke 23070 Dec 19 10:08 01 - Reckless Life.ogg
-rw-rw-r--. 1 pnoffke pnoffke 21374 Dec 19 10:09 02 - Nice Boys.ogg
-rw-rw-r--. 1 pnoffke pnoffke 26175 Dec 19 10:12 03 - Move to the City.ogg
-rw-rw-r--. 1 pnoffke pnoffke 26449 Dec 19 10:14 04 - Mama Kin.ogg
-rw-rw-r--. 1 pnoffke pnoffke 50137 Dec 19 10:17 05 - Patience.ogg
-rw-rw-r--. 1 pnoffke pnoffke 23637 Dec 19 10:15 06 - Used to Love Her.ogg
-rw-rw-r--. 1 pnoffke pnoffke 34631 Dec 19 10:13 07 - You're Crazy.ogg
-rw-rw-r--. 1 pnoffke pnoffke 45069 Dec 19 10:10 08 - One in a Million.ogg


Reproducible: Always

Steps to Reproduce:
1. Open Amarok
2. Right-click on GNR Lies
3. Add to Playlist
4. Amarok crashes, and does not display Crash Reporting Assistant

-- then --
1. Open Amarok
2. Start playing another track (not from Lies)
3. Add Lies album to playlist (works)
4. Start playing first track (or any track) from Lies album
5. Amarok crashes
Actual Results:  
Crash

Expected Results:  
Play the track

Please refer to https://bugs.kde.org/show_bug.cgi?id=311999 for a backtrace and additional details.
Comment 1 Tim-Philipp Müller 2013-01-03 15:16:16 UTC
Thanks for the bug report.

This looks like a duplicate of bug #687030 .

However, your .ogg files seem quite small - are they actually proper music files? Could you e-mail me one of the files that crashes?
Comment 2 Patrick Noffke 2013-01-03 15:26:55 UTC
Created attachment 232645 [details]
Invalid music file.

Just FYI, when I run mplayer on this file, I get the following output:

$ mplayer 01\ -\ Reckless\ Life.ogg                                                                         
MPlayer SVN-r34129-4.6.3 (C) 2000-2011 MPlayer Team                                                                                
mplayer: could not connect to socket                                                                                               
mplayer: No such file or directory                                                                                                 
Failed to open LIRC support. You will not be able to use your remote control.                                                      
                                                                                                                                   
Playing 01 - Reckless Life.ogg.
libavformat file format detected.
[ogg @ 0x38da4e5c40]Estimating duration from bitrate, this may be inaccurate
[lavf] stream 0: audio (vorbis), -aid 0, Reckless Life
Load subtitles in ./
==========================================================================
Opening audio decoder: [ffmpeg] FFmpeg/libavcodec audio decoders
AUDIO: 44100 Hz, 2 ch, s16le, 256.0 kbit/18.14% (ratio: 32000->176400)
Selected audio codec: [ffvorbis] afm: ffmpeg (FFmpeg Vorbis)
==========================================================================
AO: [pulse] 44100Hz 2ch s16le (2 bytes per sample)
Video: no video
Starting playback...
A:   0.0 (unknown) of 0.7 (00.7) ??,?%                                                                                             


Exiting... (End of file)
Comment 3 Patrick Noffke 2013-01-03 15:27:29 UTC
Oh, sorry, they are bogus files.  I used Amarok to rip the CD, and didn't realize it produced bad files.

Anyway, I've attached the first file, in case it helps to avoid the crash.
Comment 4 Sebastian Dröge (slomo) 2013-05-06 13:14:32 UTC
It does not crash for me but hangs forever, waiting for buffers to come out of vorbisdec. And oggdemux is continously pushing 0-byte buffers.
Comment 5 Sebastian Dröge (slomo) 2013-05-06 13:17:18 UTC
But only inside decodebin, a manual pipeline just ends with EOS.
Comment 6 Sebastian Dröge (slomo) 2013-05-06 13:50:27 UTC
commit b719dd9f89e8b00c28262a6a4a73cb83720ea0e4
Author: Sebastian Dröge <sebastian.droege@collabora.co.uk>
Date:   Mon May 6 15:47:34 2013 +0200

    decodebin: Expose pads when they receive EOS before any buffers
    
    Stops decodebin from waiting forever to expose a pad if there
    is never data on it.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=691072
Comment 7 Tim-Philipp Müller 2014-06-22 12:59:45 UTC
*** Bug 696273 has been marked as a duplicate of this bug. ***